Better flicker prevention when switching tabs (#1389)
There was still some flicker when nohover took effect before the tab
view actually switched. Now, we override the active tab in the tabbar
when the app is switching tabs. We also override active tab behavior so
that the close button is always visible while nohover is in effect. This
effectively removes the flickering

--- a/frontend/app/tab/tab.scss
+++ b/frontend/app/tab/tab.scss
@@ -102,6 +102,7 @@
     }
 }
 
+// Only apply hover effects when not in nohover mode. This prevents the previously-hovered tab from remaining hovered while a tab view is not mounted.
 body:not(.nohover) .tab:hover {
     & + .tab::after,
     &::after {
@@ -118,6 +119,11 @@ body:not(.nohover) .tab:hover {
             color: var(--main-text-color);
         }
     }
+}
+
+// When in nohover mode, always show the close button on the active tab. This prevents the close button of the active tab from flickering when nohover is toggled.
+body.nohover .tab.active .close {
+    visibility: visible;
 }
 
 @keyframes expandWidthAndFadeIn {
